fix: stop long json values from wrapping

--- a/packages/ui/core/src/assets/scss/json-editor-override.scss
+++ b/packages/ui/core/src/assets/scss/json-editor-override.scss
@@ -23,6 +23,6 @@
     color: #0d57a8 !important;
   }
   
-  .jsoneditor-field{
+  .jsoneditor-field, .jsoneditor-value{
     white-space: nowrap !important;
   }
